--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
   <h1>World Sustainability Dataset</h1>
 
   <p> This visualization explores various national sustainability and wealth factors and the relationships between them.
-   <br> Explore the charts using the boxes at the bottom of the page.
-<br>
+    <br> Explore the charts using the boxes at the bottom of the page.
+    <br>
     Explore the current chart by selecting a Continent or World.
   </p>
 
   <h2>Carbon Dioxide Damage Costs and GDP</h2>
 
   <div id="buttons">
-    <!-- Add the seven buttons -->
     <button onclick="loadData('World')">World</button>
     <button onclick="loadData('Africa')">Africa</button>
     <button onclick="loadData('North America')">North America</button>
@@ -51,13 +50,15 @@
 
   <div id="chart"></div>
 
-  <h3>     Why do damage costs for carbon dioxide vary so widely from country to country? How does this value relate to other
+  <h3> Why do damage costs for carbon dioxide vary so widely from country to country? How does this value relate to
+    other
     statistics?</h3>
-  <p> 
+  <p>
 
     <br>
-      This chart shows a scatterplot of carbon dioxide damage savings
-    and GDP per capita of countries in 2018. GDP is Gross Domestic Product, one of the most common ways to measure the wealth of a country.
+    This chart shows a scatterplot of carbon dioxide damage savings
+    and GDP per capita of countries in 2018. GDP is Gross Domestic Product, one of the most common ways to measure the
+    wealth of a country.
     The size of the circle corresponds to the population of the country.
     <br><br>
     Adjusted savings: carbon dioxide damage refers to the cost of damage from carbon dioxide emissions. These emissions
@@ -71,7 +72,7 @@
   <div class="box" id="box2">Next Chart</div>
 
 
-  <p>Data Source: https://data.worldbank.org/ 
+  <p>Data Source: https://data.worldbank.org/
     <br>
     All data used is from 2018.
   </p>
