--- a/chart2.html
+++ b/chart2.html
@@ -58,18 +58,16 @@
       {
         note: {
           label: "Many, but not all, European/Northern American countries have higher CO2 damage costs than Sub-Saharan African countries.",
-          //  title: 
         },
         x: 430,
         y: 400,
-        dy: -150,
+        dy: -250,
         dx: 50
 
       }
     ]
 
     async function loadData() {
-      // Set up the chart dimensions
       var margin = { top: 50, right: 40, bottom: 50, left: 40 };
       var width = 1000 - margin.left - margin.right;
       var height = 500 - margin.top - margin.bottom;
@@ -77,7 +75,6 @@
       const makeAnnotations = d3.annotation()
         .annotations(annotations);
 
-      // Create the SVG element
       var svg = d3
         .select("#chart")
         .append("svg")
@@ -87,7 +84,6 @@
         .attr("transform", "translate(50,80)")
         .call(makeAnnotations);
 
-      // Load the CSV file
       const data = await d3.csv('https://kbarta20.github.io/WorldSustainabilityDataset.csv', d3.autoType);
       const dataArray = Object.values(data);
       data.sort((a, b) => d3.descending(a["Adjusted savings: carbon dioxide damage (% of GNI) - NY.ADJ.DCO2.GN.ZS"], b["Adjusted savings: carbon dioxide damage (% of GNI) - NY.ADJ.DCO2.GN.ZS"]));
@@ -96,8 +92,6 @@
         d["Adjusted savings: carbon dioxide damage (% of GNI) - NY.ADJ.DCO2.GN.ZS"] = +d["Adjusted savings: carbon dioxide damage (% of GNI) - NY.ADJ.DCO2.GN.ZS"];
       });
 
-
-      // Set up the scales
       var xScale = d3
         .scaleBand()
         .range([0, width])
@@ -113,7 +107,6 @@
           return d["Adjusted savings: carbon dioxide damage (% of GNI) - NY.ADJ.DCO2.GN.ZS"];
         })]);
 
-      // Create the bars
       svg
         .selectAll(".bar")
         .data(dataArrayF)
@@ -137,7 +130,7 @@
           else if (d['Continent'] == 'Europe') {
             return "navy";
           }
-          return "yellow";//           }"darkturquoise");
+          return "yellow";
         })
         .on("mouseover", function (event, d) {
           tooltip.style("visibility", "visible").text(d["Country Name"]);
@@ -148,16 +141,12 @@
         .on("mouseout", function () { return tooltip.style("visibility", "hidden"); });
 
 
-      // create a tooltip
       var tooltip = d3.select("#chart")
         .append("div")
-        //.style("top", (d3.event.pageY-200)+"px")
-        //.style("left", (d3.event.pageX-100)+"px")
         .style("position", "absolute")
         .style("visibility", "hidden")
         .style("background", "white");
 
-      // Add axes
       svg
         .append("g")
         .attr("transform", "translate(0," + height + ")")
@@ -168,7 +157,6 @@
 
       svg.append("g").call(d3.axisLeft(yScale));
 
-      // Add axis labels
       svg.append("text")
         .attr("transform", `translate(${width / 2},${height + margin.top + 30})`)
         .style("text-anchor", "middle")
